--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ajv": "8.17.1",
     "antd": "^5.29.1",
     "axios": "^1.12.2",
+    "cors": "^2.8.5",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
