--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^6.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@microsoft/signalr": "^10.0.0",
     "@mui/material": "^7.3.4",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-pdf-viewer/core": "^3.12.0",
